--- a/_posts/2017-01-01-London.md
+++ b/_posts/2017-01-01-London.md
@@ -7,21 +7,79 @@ tags: [documentation,sample]
 image: london_001.jpg
 ---
 
-Millennial is a minimalist Jekyll theme. The purpose of this theme is to provide a simple, clean, content-focused blogging platform for your personal site or blog. Below you can find everything you need to get started.
+<html>
 
-## Getting Started
+<body>
+    <h1>Today's London Weather</h1>
+    <!-- <input id="city" type="text" value="" placeholder="search" list="city"> -->
+    <input id="search" type="text" value="" placeholder="search" list="city">
+    <datalist id="city">
+        <!-- <option value="seoul"></option>
+        <option value="busan"></option>
+        <option value="jeju"></option>
+        <option value="incheon"></option> -->
+        <option value="london"></option>
+        <!-- <option value="tokyo"></option> -->
+    </datalist>
+    <input type="hidden" id="search-hidden">
+
+    <p id="temperature"></p>
+    <p id="clouds"></p>
+    <p id="humidity"></p>
+    <script>    
+            document.querySelector('input[list]').addEventListener('input', function(e){
+                var input = e.target,
+                    list = input.getAttribute('list'),
+                    options = document.querySelectorAll('#'+list+'option'),
+                    hiddenInput = document.getElementById(input.getAttribute('id')+'-hidden'),
+                    inputValue = input.value;
+                    console.log(inputValue);
+
+                hiddenInput.value = inputValue;
+                for(var i = 0; i<options.length; i++){
+                    var option = options[i];
+
+                    if(option.innerText === inputValue){
+                        hiddenInput.value = option.getAttribute('data-value');
+                        break;
+                    }
+                }
+                console.log(hiddenInput.value)
+                fetch(`https://api.openweathermap.org/data/2.5/weather?q=${inputValue}&appid=43ee3ef4c2207a8546827e577bcd4cb3`)
+                .then((response) => response.json())
+                .then((data) => {
+                    document.getElementById("temperature").innerHTML =
+                        data.main.temp - 273;
+                    document.getElementById("clouds").innerHTML =
+                        data.weather[0].main
+                    document.getElementById("humidity").innerHTML =
+                        data.main.humidity
+                    console.log(data.main.temp - 273)
+                });
+
+            })
+        
+    </script>
+
+
+</body>
+
+</html>
+
+
+## London's weather
 
 [Getting Started]({{ site.github.url }}{% post_url 2016-10-10-getting-started %}): getting started with installing Millennial, whether you are completely new to using Jekyll, or simply just migrating to a new Jekyll theme.
 
-## Example Content
+## London's hot place
 
 [Text and Formatting]({{ site.github.url }}{% post_url 2016-09-09-text-formatting %})
 
-## Questions?
+## London trip tips
 
 This theme is completely free and open source software. You may use it however you want, as it is distributed under the [MIT License](http://choosealicense.com/licenses/mit/). If you are having any problems, any questions or suggestions, feel free to [tweet at me](https://twitter.com/intent/tweet?text=My%20question%20about%20Millennial;via=paululele), or [file a GitHub issue](https://github.com/lenpaul/Millennial/issues/new).
 
-## More Jekyll!
+## London tube
 
 ### Lagrange
 
@@ -40,3 +98,4 @@ Everything that you will ever need to know about this Jekyll theme is included i
 The Jekyll Starter Kit is a simple framework for starting your own Jekyll project using all of the best practices that I learned from building my other Jekyll themes.
 
 Feel free to check out <a href="https://github.com/LeNPaul/jekyll-starter-kit" target="_blank">the GitHub repository</a>, where you’ll also find instructions on how to use install and use the theme.
+
