--- a/_posts/2017-01-01-London.md
+++ b/_posts/2017-01-01-London.md
@@ -26,6 +26,13 @@ image: london_001.jpg
     <p id="temperature"></p>
     <p id="clouds"></p>
     <p id="humidity"></p>
+    <p id="description"></p>
+    <!-- <p id="image">
+        <i class="wi wi-night-sleet"></i>
+    </p> -->
+    <p id="country"></p>
+    <p id="city_name"></p>
+
     <script>    
             document.querySelector('input[list]').addEventListener('input', function(e){
                 var input = e.target,
@@ -49,12 +56,32 @@ image: london_001.jpg
                 .then((response) => response.json())
                 .then((data) => {
                     document.getElementById("temperature").innerHTML =
-                        data.main.temp - 273;
+                    ("현재온도 : "+ Math.ceil((data.main.temp- 273.15)) )
                     document.getElementById("clouds").innerHTML =
-                        data.weather[0].main
+                    ("구름 : "+ data.weather[0].main )
                     document.getElementById("humidity").innerHTML =
-                        data.main.humidity
+                    ("현재습도 : "+ data.main.humidity)
+                    document.getElementById("description").innerHTML =
+                    ("상세날씨설명 : "+ data.weather[0].description )
+                    // document.getElementById("image").innerHTML =
+                    // ("날씨 이미지 : "+ data.weather[0].icon )
+                    document.getElementById("country").innerHTML =
+                    ("나라   : "+ data.sys.country )
+                    document.getElementById("city_name").innerHTML =
+                    ("도시이름  : "+ data.name )
+
+
                     console.log(data.main.temp - 273)
+                    // console.log("현재온도 : "+ (data.main.temp- 273.15) );
+                    console.log("현재온도 : "+ Math.ceil((data.main.temp- 273.15)) );
+                    console.log("현재습도 : "+ data.main.humidity);
+                    console.log("날씨 : "+ data.weather[0].main );
+                    console.log("상세날씨설명 : "+ data.weather[0].description );
+                    console.log("날씨 이미지 : "+ data.weather[0].icon );
+                    console.log("바람   : "+ data.wind.speed );
+                    console.log("나라   : "+ data.sys.country );
+                    console.log("도시이름  : "+ data.name );
+                    console.log("구름  : "+ (data.clouds.all) +"%" );             
                 });
 
             })
