--- a/_posts/2022-11-01-LA.md
+++ b/_posts/2022-11-01-LA.md
@@ -10,7 +10,7 @@ image: LosAngeles2.jpg
 <html>
 
 <body>
-    <h1>Today's London Temperature</h1>
+    <h1>Today's LA Temperature</h1>
     <!-- <input id="city" type="text" value="" placeholder="search" list="city"> -->
     <input id="search" type="text" value="" placeholder="search" list="city">
     <datalist id="city">
