--- a/_posts/2022-11-02-osaka.md
+++ b/_posts/2022-11-02-osaka.md
@@ -6,3 +6,89 @@ categories: documentation
 tags: [documentation,sample]
 image: Osaka.jpg
 ---
+
+<html>
+
+<body>
+    <h1>Today's Osaka Weather</h1>
+    <!-- <input id="city" type="text" value="" placeholder="search" list="city"> -->
+    <input id="search" type="text" value="" placeholder="search" list="city">
+    <datalist id="city">
+        <!-- <option value="seoul"></option>
+        <option value="busan"></option>
+        <option value="jeju"></option>
+        <option value="incheon"></option> -->
+        <option value="osaka"></option>
+        <!-- <option value="tokyo"></option> -->
+    </datalist>
+    <input type="hidden" id="search-hidden">
+
+    <p id="temperature"></p>
+    <p id="clouds"></p>
+    <p id="humidity"></p>
+    <p id="description"></p>
+    <!-- <p id="image">
+        <i class="wi wi-night-sleet"></i>
+    </p> -->
+    <p id="country"></p>
+    <p id="city_name"></p>
+
+    <script>    
+            document.querySelector('input[list]').addEventListener('input', function(e){
+                var input = e.target,
+                    list = input.getAttribute('list'),
+                    options = document.querySelectorAll('#'+list+'option'),
+                    hiddenInput = document.getElementById(input.getAttribute('id')+'-hidden'),
+                    inputValue = input.value;
+                    console.log(inputValue);
+
+                hiddenInput.value = inputValue;
+                for(var i = 0; i<options.length; i++){
+                    var option = options[i];
+
+                    if(option.innerText === inputValue){
+                        hiddenInput.value = option.getAttribute('data-value');
+                        break;
+                    }
+                }
+                console.log(hiddenInput.value)
+                fetch(`https://api.openweathermap.org/data/2.5/weather?q=${inputValue}&appid=43ee3ef4c2207a8546827e577bcd4cb3`)
+                .then((response) => response.json())
+                .then((data) => {
+                    document.getElementById("temperature").innerHTML =
+                    ("현재온도 : "+ Math.ceil((data.main.temp- 273.15)) )
+                    document.getElementById("clouds").innerHTML =
+                    ("구름 : "+ data.weather[0].main )
+                    document.getElementById("humidity").innerHTML =
+                    ("현재습도 : "+ data.main.humidity)
+                    document.getElementById("description").innerHTML =
+                    ("상세날씨설명 : "+ data.weather[0].description )
+                    // document.getElementById("image").innerHTML =
+                    // ("날씨 이미지 : "+ data.weather[0].icon )
+                    document.getElementById("country").innerHTML =
+                    ("나라   : "+ data.sys.country )
+                    document.getElementById("city_name").innerHTML =
+                    ("도시이름  : "+ data.name )
+
+
+                    console.log(data.main.temp - 273)
+                    // console.log("현재온도 : "+ (data.main.temp- 273.15) );
+                    console.log("현재온도 : "+ Math.ceil((data.main.temp- 273.15)) );
+                    console.log("현재습도 : "+ data.main.humidity);
+                    console.log("날씨 : "+ data.weather[0].main );
+                    console.log("상세날씨설명 : "+ data.weather[0].description );
+                    console.log("날씨 이미지 : "+ data.weather[0].icon );
+                    console.log("바람   : "+ data.wind.speed );
+                    console.log("나라   : "+ data.sys.country );
+                    console.log("도시이름  : "+ data.name );
+                    console.log("구름  : "+ (data.clouds.all) +"%" );             
+                });
+
+            })
+        
+    </script>
+
+
+</body>
+
+</html>
